...
        Ваш результат: \(correctAnswers)/\(questionsAmount)
        Количество сыгранных квизов: \(totalCount)
        Рекорд: \(currentRecord) (\(recordTime))
        Средняя точность: \(accuracy)%
        """
        
        let alertModel = AlertModel(title: "Этот раунд окончен!", message: text, buttonText: "Сыграть ещё раз") { [weak self] in
            self?.restartGame()
        }
        
        let alertPresenter = AlertPresenter()
        alertPresenter.delegate = viewController
        viewController?.alertPresenter = alertPresenter
...
